--- a/locales/ru/app.json
+++ b/locales/ru/app.json
@@ -5,7 +5,7 @@
     "name": "Меню",
     "about": "О Noi",
     "hide": "Скрыть Noi",
-    "hideOthers": "Скрыть остальные",
+    "hideOthers": "Скрыть другие",
     "quit": "Выйти из Noi",
     "unhide": "Показать все",
     "checkUpdates": "Проверить обновления…",
@@ -23,32 +23,33 @@
     "hideSidebar": "Скрыть боковую панель",
     "devTools": "Инструменты разработчика",
     "frostedTexture": "Матовая текстура",
-    "xQuit": "Нажмите [X], чтобы выйти",
+    "xQuit": "Нажмите [X] для выхода",
+    "systemTray": "Системный трей",
 
     "edit": "Редактировать",
     "undo": "Отменить",
     "redo": "Повторить",
-    "pasteAndMatchStyle": "Вставить с соответствием стилю",
+    "pasteAndMatchStyle": "Вставить с соответствием стиля",
     "delete": "Удалить",
 
     "view": "Вид",
     "refresh": "Обновить страницу",
     "goBack": "Назад",
     "goForward": "Вперед",
-    "resetZoom": "Настоящий размер",
+    "resetZoom": "Исходный размер",
     "zoomIn": "Увеличить",
     "zoomOut": "Уменьшить",
-    "fullScreen": "На весь экран",
+    "fullScreen": "Во весь экран",
 
     "help": "Помощь",
-    "log": "Лог Noi",
+    "log": "Журнал Noi",
     "gettingStarted": "Начало работы",
-    "issues": "Проблемы на GitHub",
+    "issues": "GitHub Проблемы",
     "shareIdeas": "Поделиться идеями и отзывами",
 
-    "learnSpelling": "Изучение правописания",
-    "lookUpSelection": "Поиск «{selection}»",
-    "searchWithGoogle": "Поиск в Google",
+    "learnSpelling": "Изучить правописание",
+    "lookUpSelection": "Поискать “{selection}”",
+    "searchWithGoogle": "Поиск через Google",
     "cut": "Вырезать",
     "copy": "Копировать",
     "paste": "Вставить",
@@ -63,79 +64,128 @@
     "copyImageAddress": "Копировать адрес изображения",
     "copyVideoAddress": "Копировать адрес видео",
     "inspect": "Исследовать элемент",
-    "services": "Сервисы",
+    "services": "Службы",
     "reload": "Перезагрузить",
     "rename": "Переименовать",
     "user": "Пользователь",
-    "setSystemTray": "Установить в системный трей",
-    "clearCache": "Очистить кэш"
+    "setSystemTray": "Установить как системный трей",
+    "clearCache": "Очистить данные кэша"
   },
   "form": {
     "name": "Имя",
     "url": "URL",
-    "save": "Сохранить",
-    "cancel": "Отмена",
-    "reset": "Сброс",
     "invalidURL": "Неверный URL, пожалуйста, введите заново.",
     "nameNotEmpty": "Имя не может быть пустым."
   },
   "sidebar": {
     "warn": {
-      "url_delete": "Текущий URL не может быть удален.",
-      "dir_delete": "Директория текущего URL не может быть удалена.",
-      "tray_delete": "Текущий URL установлен как системный трей, пожалуйста, сначала отмените настройку."
+      "urlDelete": "Текущий URL используется.",
+      "dirDelete": "Текущая директория используется.",
+      "trayDelete": "Системный трей использует текущий URL, его нельзя удалить."
     },
     "tip": {
-      "delete": "После удаления восстановление невозможно, вы уверены, что хотите удалить?",
-      "sync_overwrite": "Синхронизация перезапишет все данные, кроме пользовательских. Продолжить?",
-      "sync_reset": "Вы уже используете последнюю версию. Синхронизация сбросит все данные, кроме пользовательских. Продолжить?",
-      "sync_ok": "Синхронизация успешна",
-      "sync_reset_ok": "Сброс успешен"
+      "delete": "Невозможно восстановить после удаления, вы уверены, что хотите удалить?",
+      "syncOverwrite": "Синхронизация перезапишет все данные, кроме пользовательских. Вы хотите продолжить?",
+      "syncReset": "Вы используете последнюю версию. Синхронизация сбросит все данные, кроме пользовательских. Вы хотите продолжить?",
+      "syncOk": "Синхронизация успешна",
+      "syncResetOk": "Сброс успешен"
     }
   },
   "network": {
     "error": {
-      "title": "Сайт недоступен",
-      "long_respond": "слишком долго отвечает.",
       "try": "Попробуйте:",
-      "check_1": "Проверить соединение",
-      "check_2": "Проверить прокси и фаервол"
+      "title": "Сайт не доступен",
+      "longRespond": "слишком долго не отвечает.",
+      "checkConnection": "Проверьте соединение",
+      "checkProxy": "Проверьте прокси и фаервол"
     }
   },
   "settings": {
     "menu": {
-      "general": "Основные",
+      "general": {
+        "name": "Общие",
+        "syncBookmarks": "Синхронизировать закладки",
+        "globalShortcut": "Глобальные горячие клавиши",
+        "recording": "Запись...",
+        "proxy": "Прокси",
+        "proxyRules": "Правила",
+        "proxyBypassRules": "Правила обхода"
+      },
       "extensions": "Расширения",
       "prompts": {
-        "name": "Подсказки",
-        "userPrompts": "Пользовательские подсказки",
-        "promptTags": "Теги подсказок",
-        "customSync": "Настройка синхронизации"
+        "name": "Запросы",
+        "userPrompts": "Пользовательские запросы",
+        "promptTags": "Теги запросов",
+        "customSync": "Пользовательская синхронизация"
       }
     },
     "confirm": {
-      "batch": {
-        "use": "Вы уверены, что хотите использовать эти подсказки?",
-        "delete": "Вы уверены, что хотите удалить эти подсказки?",
-        "disable": "Вы уверены, что хотите отключить эти подсказки?",
-        "enable": "Вы уверены, что хотите включить эти подсказки?"
-      }
+      "delete": "Вы уверены, что хотите удалить эту запись?",
+      "batchEnable": "Вы уверены, что хотите включить эти запросы?",
+      "batchDelete": "Вы уверены, что хотите удалить эти запросы?",
+      "batchDisable": "Вы уверены, что хотите отключить эти запросы?",
+      "batchUse": "Вы уверены, что хотите использовать эти запросы?"
     },
     "message": {
-      "add": "Добавлено",
-      "sync": "Синхронизировано",
+      "added": "Добавлено",
+      "synced": "Синхронизировано",
       "invalidData": "Неверные данные",
-      "missingActAndPrompt": "Отсутствуют поля: 'act', 'prompt'. Используйте 'Alias' для переименования."
+      "missingActAndPrompt": "Отсутствуют поля: 'act', 'prompt'. Попробуйте использовать 'Alias' для переименования.",
+      "missingManifest": "Файл manifest.json отсутствует или неверен.",
+      "checkExtension": "Пожалуйста, перепроверьте директорию расширения:",
+      "existExtension": "Расширение уже существует."
+    },
+    "tip": {
+      "proxyRules": "Правила, указывающие, какие прокси использовать.",
+      "proxyBypassRules": "Правила, указывающие, какие URL следует обходить настройки прокси.",
+      "shortcutRule": "Правило горячих клавиш",
+      "modifierKeys": "Модификаторы клавиш",
+      "regularKeys": "Обычные клавиши",
+      "noiExtension": "Обратите внимание, что Noi не поддерживает полный спектр API расширений Chrome. Смотрите Поддерживаемые API расширений для получения дополнительной информации о поддерживаемом."
     },
     "table": {
       "name": "Имя",
-      "sync": "Синхронизация",
+      "extension": "Расширение",
       "description": "Описание",
+      "version": "Версия",
       "tag": "Тег",
-      "action": "Действие",
       "color": "Цвет",
       "lastUpdate": "Последнее обновление",
       "usageCount": "Количество использований"
     }
+  },
+  "action": {
+    "name": "Действие",
+    "add": "Добавить",
+    "cancel": "Отмена",
+    "create": "Создать",
+    "confirm": "Подтвердить",
+    "detail": "Детали",
+    "delete": "Удалить",
+    "disable": "Отключить",
+    "edit": "Редактировать",
+    "enable": "Включить",
+    "export": "Экспорт",
+    "refresh": "Обновить",
+    "reset": "Сбросить",
+    "sync": "Синхронизировать",
+    "save": "Сохранить",
+    "search": "Поиск",
+    "select": "Выбрать",
+    "use": "Использовать",
+    "batchDisable": "Пакетное отключение",
+    "batchEnable": "Пакетное включение",
+    "batchDelete": "Пакетное удаление",
+    "batchUse": "Пакетное использование"
+  },
+  "prompt": {
+    "promptSend": "Отправка запроса",
+    "newChat": "Новый чат",
+    "sendMessage": "Отправить сообщение",
+    "resetPanel": "Сбросить панель",
+    "promptCmd": "Команда запроса",
+    "sizeSmall": "Маленький",
+    "sizeMedium": "Средний",
+    "sizeLarge": "Большой"
   }
 }
