--- a/locales/zh/app.json
+++ b/locales/zh/app.json
@@ -24,6 +24,7 @@
     "devTools": "开发者工具",
     "frostedTexture": "磨砂纹理",
     "xQuit": "点击 [X] 退出",
+    "systemTray": "系统托盘",
 
     "edit": "编辑",
     "undo": "撤销",
@@ -47,7 +48,7 @@
     "shareIdeas": "分享想法和反馈",
 
     "learnSpelling": "学习拼写",
-    "lookUpSelection": "查询 “{selection}”",
+    "lookUpSelection": "查找 “{selection}”",
     "searchWithGoogle": "使用 Google 搜索",
     "cut": "剪切",
     "copy": "复制",
@@ -72,39 +73,44 @@
   },
   "form": {
     "name": "名称",
-    "url": "网址",
-    "save": "保存",
-    "cancel": "取消",
-    "reset": "重置",
-    "invalidURL": "无效的网址，请重新输入",
+    "url": "URL",
+    "invalidURL": "无效 URL，请重新输入",
     "nameNotEmpty": "名称不能为空"
   },
   "sidebar": {
     "warn": {
-      "url_delete": "当前网址不能被删除",
-      "dir_delete": "当前网址的目录不能被删除",
-      "tray_delete": "当前网址已设置为系统托盘，请先取消设置"
+      "urlDelete": "当前 URL 正在使用中",
+      "dirDelete": "当前目录正在使用中",
+      "trayDelete": "系统托盘正在使用当前 URL，无法被删除"
     },
     "tip": {
-      "delete": "删除后无法恢复，确定要删除吗？",
-      "sync_overwrite": "同步会覆盖除自定义数据外的其他数据，是否继续？",
-      "sync_reset": "当前已是最新版本，同步会重置除自定义数据外的其他数据，是否继续？",
-      "sync_ok": "同步成功",
-      "sync_reset_ok": "重置成功"
+      "delete": "删除后无法恢复，您确定要删除吗？",
+      "syncOverwrite": "同步将覆盖所有数据，除了自定义数据。您想继续吗？",
+      "syncReset": "您当前为最新版本，同步将重置除自定义数据外的所有数据。您想继续吗？",
+      "syncOk": "同步成功",
+      "syncResetOk": "重置成功"
     }
   },
   "network": {
     "error": {
-      "title": "无法连接到此网站",
-      "long_respond": "响应时间过长。",
       "try": "尝试：",
-      "check_1": "检查连接",
-      "check_2": "检查代理和防火墙"
+      "title": "无法访问此网站",
+      "longRespond": "响应时间过长",
+      "checkConnection": "检查连接",
+      "checkProxy": "检查代理和防火墙"
     }
   },
   "settings": {
     "menu": {
-      "general": "常规",
+      "general": {
+        "name": "通用",
+        "syncBookmarks": "同步书签",
+        "globalShortcut": "全局快捷键",
+        "recording": "正在录制…",
+        "proxy": "代理",
+        "proxyRules": "规则",
+        "proxyBypassRules": "绕过规则"
+      },
       "extensions": "扩展",
       "prompts": {
         "name": "提示",
@@ -114,28 +120,72 @@
       }
     },
     "confirm": {
-      "batch": {
-        "use": "您确定要使用这些提示吗？",
-        "delete": "您确定要删除这些提示吗？",
-        "disable": "您确定要禁用这些提示吗？",
-        "enable": "您确定要启用这些提示吗？"
-      }
+      "delete": "您确定要删除这条记录吗？",
+      "batchEnable": "您确定要启用这些提示吗？",
+      "batchDelete": "您确定要删除这些提示吗？",
+      "batchDisable": "您确定要禁用这些提示吗？",
+      "batchUse": "您确定要使用这些提示吗？"
     },
     "message": {
-      "add": "已添加",
-      "sync": "已同步",
+      "added": "已添加",
+      "synced": "已同步",
       "invalidData": "数据无效",
-      "missingActAndPrompt": "缺少字段：'act'、'prompt'。请使用 'Alias' 进行重命名。"
+      "missingActAndPrompt": "缺少字段：'act', 'prompt'。尝试使用 'Alias' 重命名",
+      "missingManifest": "manifest.json 文件缺失或无效",
+      "checkExtension": "请重新检查扩展目录：",
+      "existExtension": "扩展已存在"
+    },
+    "tip": {
+      "proxyRules": "使用哪些代理规则",
+      "proxyBypassRules": "哪些 URL 应绕过代理设置规则",
+      "shortcutRule": "快捷键规则",
+      "modifierKeys": "修饰键",
+      "regularKeys": "常规键",
+      "noiExtension": "注意，Noi 不支持 Chrome 扩展 API 的全部范围。有关支持的详细信息，请参阅支持的扩展 API。"
     },
     "table": {
       "name": "名称",
-      "sync": "同步",
+      "extension": "扩展",
       "description": "描述",
+      "version": "版本",
       "tag": "标签",
-      "action": "操作",
       "color": "颜色",
       "lastUpdate": "最后更新",
       "usageCount": "使用次数"
     }
+  },
+  "action": {
+    "name": "操作",
+    "add": "添加",
+    "cancel": "取消",
+    "create": "创建",
+    "confirm": "确认",
+    "detail": "详情",
+    "delete": "删除",
+    "disable": "禁用",
+    "edit": "编辑",
+    "enable": "启用",
+    "export": "导出",
+    "refresh": "刷新",
+    "reset": "重置",
+    "sync": "同步",
+    "save": "保存",
+    "search": "搜索",
+    "select": "选择",
+    "use": "使用",
+    "batchDisable": "批量禁用",
+    "batchEnable": "批量启用",
+    "batchDelete": "批量删除",
+    "batchUse": "批量使用"
+  },
+  "prompt": {
+    "promptSend": "提示发送",
+    "newChat": "新聊天",
+    "sendMessage": "发送消息",
+    "resetPanel": "重置面板",
+    "promptCmd": "提示指令",
+    "sizeSmall": "小",
+    "sizeMedium": "中",
+    "sizeLarge": "大"
   }
 }
